--- a/_posts/2025-12-23-annie-thm.md
+++ b/_posts/2025-12-23-annie-thm.md
@@ -1,5 +1,5 @@
 ---
-title: "Annit TryHackMe" 
+title: "Annie TryHackMe" 
 date: 2025-12-23 22:30:00 0000+
 tags: [WriteUp, Annie, THM,  Enumeration, CVE-2020-13160, setcap, python3, Privilege Escalation, SUID, BufferOverflow, Linux]
 categories: [WriteUps, TryHackMe]
