--- a/_posts/2025-12-23-annie-thm.md
+++ b/_posts/2025-12-23-annie-thm.md
@@ -28,7 +28,7 @@ Results show that we have 3 ports open on the box one being SSH, and one (7070) 
 
 ### Web Enumeration
 
-Visiting it in browser gives us this page
+Visiting it in browser gives us this page.
 
 ![image.png](/assets/images/Annie_THM/image%202.png)
 
